--- a/deb-packages/Readme
+++ b/deb-packages/Readme
@@ -1,6 +1,4 @@
 
-# Building Deb package.
-
 ## Building the deb package.
 
 This has been developed and tested on Ubuntu 18.04. It should work on other releases.
@@ -32,7 +30,7 @@ cpack
 
 ## How to use the 64 bits only package
 
-The 64 bits package install the following files:
+The 64 bits package installs the following files:
 
 ```bash
 /usr/bin/lin-vst-servertrack.exe
@@ -51,7 +49,7 @@ It will create the appropriate .so file alongside your DLL.
 
 This should create a LinVst-x.y.z.deb file ready to install.
 
-### building the 64 bits and 32 bits version.
+### building the 64 bit and 32 bit version.
 
 In the LinVst/deb-packages directory:
 
@@ -63,9 +61,9 @@ make
 cpack
 ```
 
-## How to use the 64 bits only package
+## How to use the 64 bit and 32 bit package
 
-The 64 bits package install the following files:
+The 64 bit and 32 bit package installs the following files:
 
 ```bash
 /usr/bin/lin-vst-servertrack.exe
@@ -102,7 +100,7 @@ This should create a LinVst-i386-x.y.z.deb file ready to install.
 
 ## How to use the 32 bits only package
 
-The 64 bits package install the following files:
+The 64 bits package installs the following files:
 
 ```bash
 /usr/bin/lin-vst-server32lx.exe
