--- a/deb-packages/Readme
+++ b/deb-packages/Readme
@@ -1,5 +1,4 @@
 
-
 ## Building the deb package.
 
 This has been developed and tested on Ubuntu 18.04. It should work on other releases.
@@ -17,17 +16,17 @@ The 64 bit and 32 bit version can run 64 bit vst's and also run 32 bit vst's on 
 
 The 32 bit only version can run 32 bit vst's on a 32 bit Linux system.
 
-### building the 64 bits only version.
+------------------------------------
+
+## building the 64 bits only version.
 
 In the LinVst/deb-packages directory:
 
-```bash
 mkdir build64
 cd build64
 cmake ../64bitsonly
 make
 cpack
-```
 
 This should create a LinVst-64bit-x.y.z.deb file ready to install.
 
@@ -35,35 +34,32 @@ This should create a LinVst-64bit-x.y.z.deb file ready to install.
 
 The 64 bits package installs the following files:
 
-```bash
 /usr/bin/lin-vst-servertrack.exe
-./usr/bin/lin-vst-servertrack.exe.so
-./usr/bin/pylinvstconvert-64bit
-./usr/share/LinVst/64bit/linvst.so
-```
+/usr/bin/lin-vst-servertrack.exe.so
+/usr/bin/pylinvstconvert-64bit
+/usr/share/LinVst/64bit/linvst.so
+/usr/share/LinVst/64bit/Readme
 
 You can use the python script pylinvstconvert to convert your windows vst dlls the following way:
 
-```
 pylinvstconvert-64bit path/to/the/vst.dll
-```
 
-It will create the appropriate .so file alongside your DLL.
+which will create the appropriate .so file alongside your DLL.
 
 To batch convert multiple vst dll files use
 pylinvstconvert-64bit-batch /pathtovstfolder/*.dll
 
-### building the 64 bit and 32 bit version.
+-------------------------------
+
+## building the 64 bit and 32 bit version.
 
 In the LinVst/deb-packages directory:
 
-```bash
 mkdir build64-32
 cd build64-32
 cmake ../64bits-32bits
 make
 cpack
-```
 
 This should create a LinVst-64bit-32bit-x.y.z.deb file ready to install.
 
@@ -71,37 +67,34 @@ This should create a LinVst-64bit-32bit-x.y.z.deb file ready to install.
 
 The 64 bit and 32 bit package installs the following files:
 
-```bash
 /usr/bin/lin-vst-servertrack.exe
-./usr/bin/lin-vst-servertrack.exe.so
+/usr/bin/lin-vst-servertrack.exe.so
 /usr/bin/lin-vst-servertrack32.exe
-./usr/bin/lin-vst-servertrack32.exe.so
-./usr/bin/pylinvstconvert-64bit-32bit
-./usr/share/LinVst/64bit-32bit/linvst.so
-```
+/usr/bin/lin-vst-servertrack32.exe.so
+/usr/bin/pylinvstconvert-64bit-32bit
+/usr/share/LinVst/64bit-32bit/linvst.so
+/usr/share/LinVst/64bit-32bit/Readme
 
 You can use the python script pylinvstconvert to convert your windows vst dlls the following way:
 
-```
 pylinvstconvert-64bit-32bit path/to/the/vst.dll
-```
 
-It will create the appropriate .so file alongside your DLL.
+which will create the appropriate .so file alongside your vst dll.
 
 To batch convert multiple vst dll files use
 pylinvstconvert-64bit-32bit-batch /pathtovstfolder/*.dll
 
-### building the 32 bits only version.
+---------------------
+
+## building the 32 bits only version.
 
 In the LinVst/deb-packages directory:
 
-```bash
 mkdir build32
 cd build32
 cmake ../32bitonly
 make
 cpack
-```
 
 This should create a LinVst-32bit-x.y.z.deb file ready to install.
 
@@ -109,23 +102,22 @@ This should create a LinVst-32bit-x.y.z.deb file ready to install.
 
 The 64 bits package installs the following files:
 
-```bash
 /usr/bin/lin-vst-server32lx.exe
-./usr/bin/lin-vst-server32lx.exe.so
-./usr/bin/pylinvstconvert-32bit
-./usr/share/LinVst/32bit/linvst.so
-```
+/usr/bin/lin-vst-server32lx.exe.so
+/usr/bin/pylinvstconvert-32bit
+/usr/share/LinVst/32bit/linvst.so
+/usr/share/LinVst/32bit/Readme
 
 You can use the python script pylinvstconvert to convert your windows vst dlls the following way:
 
-```
 pylinvstconvert-32bit path/to/the/vst.dll
-```
 
-It will create the appropriate .so file alongside your DLL.
+which will create the appropriate .so file alongside your vst dll.
 
 To batch convert multiple vst dll files use
 pylinvstconvert-32bit-batch /pathtovstfolder/*.dll
+
+------------------
 
 ## Notes
 
