--- a/deb-packages/Readme
+++ b/deb-packages/Readme
@@ -36,6 +36,8 @@ The 64 bits package installs the following files:
 
 /usr/bin/lin-vst-servertrack.exe
 /usr/bin/lin-vst-servertrack.exe.so
+/usr/bin/linvstconvert
+/usr/bin/linvstconverttree
 /usr/bin/pylinvstconvert-64bit
 /usr/share/LinVst/64bit/linvst.so
 /usr/share/LinVst/64bit/Readme
@@ -71,6 +73,8 @@ The 64 bit and 32 bit package installs the following files:
 /usr/bin/lin-vst-servertrack.exe.so
 /usr/bin/lin-vst-servertrack32.exe
 /usr/bin/lin-vst-servertrack32.exe.so
+/usr/bin/linvstconvert
+/usr/bin/linvstconverttree
 /usr/bin/pylinvstconvert-64bit-32bit
 /usr/share/LinVst/64bit-32bit/linvst.so
 /usr/share/LinVst/64bit-32bit/Readme
@@ -104,6 +108,8 @@ The 64 bits package installs the following files:
 
 /usr/bin/lin-vst-server32lx.exe
 /usr/bin/lin-vst-server32lx.exe.so
+/usr/bin/linvstconvert
+/usr/bin/linvstconverttree
 /usr/bin/pylinvstconvert-32bit
 /usr/share/LinVst/32bit/linvst.so
 /usr/share/LinVst/32bit/Readme
@@ -119,6 +125,4 @@ pylinvstconvert-32bit-batch /pathtovstfolder/*.dll
 
 ------------------
 
-## Notes
 
-The default convert tool with gui is not packaged, it is replaced by the pylinvstconvert scripts.
