--- a/deb-packages/Readme
+++ b/deb-packages/Readme
@@ -1,3 +1,20 @@
+## To use LinVst
+
+The vst dll files need to have associated .so files (that have the same name as the vst dll files), so that a Linux DAW can load them.
+
+linvstconvert and linvstconverttree (also handles vst dll files in subdirectories) can produce the associated .so files automatically.
+
+Start linvstconvert (or linvstconverttree) and select the linvst.so file which is installed in /usr/share/LinVst/xxbit.
+
+Then select the folder containing the vst dll files, and then click on the Convert button.
+
+Then point the DAW to scan that vst folder.
+
+linvstconvert and linvstconverttree are installed in /usr/bin
+
+There is also a python script that can be used (see below).
+
+-------------
 
 ## Building the deb package.
 
