--- a/deb-packages/Readme
+++ b/deb-packages/Readme
@@ -20,105 +20,17 @@ For example linvstconvertxx "/home/user/vst/*" or linvstconvertxx "/home/user/vs
 
 -------------
 
-The LinVst source folder should be located in a folder/directory with user permissions otherwise cmake might produce permission errors.
+LinVst-3.0 made using Debian Buster but will probably run on other distros.
 
-## Building the deb package.
+32 bit vst's running under the 64bit LinVst versions need a distros multiarch to be enabled (sudo apt-get install gcc-multilib g++-multilib for Ubuntu/Debian).
 
-This has been developed and tested on Ubuntu 18.04. It should work on other releases.
-It has been tested with wineHQ stable release in 32 and 64 bits.
+A Gtk and commandline utility is included that can automatically batch rename linvst.so to mutiple windows vst dll names that are in a folder/directory.
 
-The Deb package files are in the deb-packages folder.
+For Waveform, disable sandbox option for plugins.
 
-There are 3 different versions.
+For Renoise, choose the sandbox option for plugins.
 
-A 64 bit version only, a 64 bit and 32 bit version and a 32 bit version only (for 32 bit only Linux systems/distros)
-
-The 64 bit only version can run 64 bit vst's on a 64 bit Linux system.
-
-The 64 bit and 32 bit version can run 64 bit vst's and also run 32 bit vst's on a 64 bit Linux system (needs multilib and wine 32 bit development libraries and 32 bit development libraries, see make instructions).
-
-The 32 bit only version can run 32 bit vst's on a 32 bit Linux system.
-
-------------------------------------
-
-## building the 64 bits only version.
-
-In the LinVst/deb-packages directory:
-
-mkdir build64
-cd build64
-cmake ../64bitsonly
-make
-cpack
-
-This should create a LinVst-64bit-x.y.z.deb file ready to install.
-
-## How to use the 64 bits only package
-
-The 64 bits package installs the following files:
-
-/usr/bin/lin-vst-servertrack.exe
-/usr/bin/lin-vst-servertrack.exe.so
-/usr/bin/linvstconvert
-/usr/bin/linvstconverttree
-/usr/bin/linvstconvert64
-/usr/share/LinVst/64bit/linvst.so
-/usr/share/LinVst/Readme
-
--------------------------------
-
-## building the 64 bit and 32 bit version.
-
-In the LinVst/deb-packages directory:
-
-mkdir build64-32
-cd build64-32
-cmake ../64bits-32bits
-make
-cpack
-
-This should create a LinVst-64bit-32bit-x.y.z.deb file ready to install.
-
-## How to use the 64 bit and 32 bit package
-
-The 64 bit and 32 bit package installs the following files:
-
-/usr/bin/lin-vst-servertrack.exe
-/usr/bin/lin-vst-servertrack.exe.so
-/usr/bin/lin-vst-servertrack32.exe
-/usr/bin/lin-vst-servertrack32.exe.so
-/usr/bin/linvstconvert
-/usr/bin/linvstconverttree
-/usr/bin/linvstconvert6432
-/usr/share/LinVst/64bit-32bit/linvst.so
-/usr/share/LinVst/Readme
-
----------------------
-
-## building the 32 bits only version.
-
-In the LinVst/deb-packages directory:
-
-mkdir build32
-cd build32
-cmake ../32bitonly
-make
-cpack
-
-This should create a LinVst-32bit-x.y.z.deb file ready to install.
-
-## How to use the 32 bits only package
-
-The 64 bits package installs the following files:
-
-/usr/bin/lin-vst-server32lx.exe
-/usr/bin/lin-vst-server32lx.exe.so
-/usr/bin/linvstconvert
-/usr/bin/linvstconverttree
-/usr/bin/linvstconvert32
-/usr/share/LinVst/32bit/linvst.so
-/usr/share/LinVst/Readme
-
-------------------
+For Bitwig 2.5 and 3.x, In Settings->Plug-ins choose "Individually" plugin setting and check all of the LinVst plugins.
+For Bitwig 2.4.3, In Settings->Plug-ins choose Independent plug-in host process for "Each plug-in" setting and check all of the LinVst plugins.
 
 
