--- a/convert/Readme
+++ b/convert/Readme
@@ -1,38 +1,13 @@
-The convert folder is for making the linvstconvert and linvstconverttree (navigates subfolders) utilities that name convert Windows vst dll filenames (.dll) to corresponding Linux shared library filenames (.so).
+The convert folder is for making the linvstconvert utility that name converts Windows vst dll filenames (.dll) to corresponding Linux shared library filenames (.so).
 
 -------
+
 Makefile makes linvstconvert
 
 sudo make install, installs linvstconvert to /usr/bin
 
-Makefile-linvstconverttree makes linvstconvertree
-
 gtk3 dev libraries are needed.
 
 -------
 
-To use cmake
-
-mkdir linvstconvert in the main LinVst folder
-
-cd linvstconvert
-
-cmake ../convert
-
-make
-
-sudo make install installs linvstconvert linvstconverttree and linvstconvert-cli to /usr/bin
-
-gtk3 dev libraries are needed.
-
--------
-
-The makegtk etc files in the convert folder contain simple commands for making the convert utilities.
-
-Depending on which option is chosen (gtk2 gtk3 subdirectories(tree)) makegtk2 makegtk2tree makegtk3 and makegtk3tree need to be made executable ie chmod +x makegtk3
-
-Then run it by changing into the directory and running ./makegtk3 etc
-
-A -no-pie option might be needed on some systems for the linvstconvert and linvstconverttree icons to appear.
-
-Use makegtk3-withicon etc for the -no-pie icon option.
+The -no-pie option in the Makefile might need to be removed on some systems.
