--- a/deb-packages/Readme
+++ b/deb-packages/Readme
@@ -2,27 +2,21 @@ This Readme is also in /usr/share/LinVst
 
 ## To use LinVst
 
-The vst dll files need to have associated .so files (that have the same name as the vst dll files), so that a Linux DAW can load them.
+Install the vst's.
 
-linvstconvert and linvstconverttree (also handles vst dll files in subdirectories) can produce the associated .so files automatically.
+The vst's will probably be installed by default to a Wine folder, something like ~/.wine/drive_c/Program Files/Steinberg/VSTPlugins (which is similar to where they are installed on Windows).
 
-linvstconvert will not convert vst dll's in sub folders and so some plugins might not appear after a daw scan, so if that happens then use linvstconverttree.
+It's also possible with most plugins to make a folder and install the windows vst's into it.
 
-linvstconverttree will convert vst dll's in all sub folders.
+Start linvstconvert and select the linvst.so file which is installed in /usr/share/LinVst/xxbit.
 
-Start linvstconvert (or linvstconverttree) and select the linvst.so file which is installed in /usr/share/LinVst/xxbit.
+Point linvstconvert to the folder containing the windows vst's and hit the Start (Convert) button.
 
-Then select the folder containing the vst dll files, and then click on the Convert button.
+Start up the linux DAW and point it to scan the folder containing the windows vst's.
 
-Then point the DAW to scan that vst folder.
+If new vst plugins are added to a folder, then just run linvstconvert again on that folder.
 
-linvstconvert and linvstconverttree are installed in /usr/bin
-
-There are also python scripts that can be used linvstconvert64 for LinVst 64bit only, linvstconvert6432 for LinVst 64bit and 32bit and linvstconvert32 for LinVst 32bit only.
-
-linvstconvertxx "path to vst dll folder/*" (** for subdirectories); Path to vst dll folder is enclosed in quotes.
-
-For example linvstconvertxx "/home/user/vst/*" or linvstconvertxx "/home/user/vst/**" for subdirectories.
+linvstconvert is installed into /usr/bin
 
 -------------
 
